# savetracker

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
savetracker/: .projections.json  Cargo.toml
savetracker-core/: Cargo.toml
savetracker-core/src/: lib.rs  patch.rs  storage.rs
savetracker/etc/formats/: borderlands4.toml
savetracker/src/: analyze.rs  batch.rs  claude.rs  config.rs  decode.rs  decompress.rs  detect.rs  diff.rs  gemini.rs  git_store.rs  lib.rs  main.rs  ollama.rs  openai.rs  snapshot.rs  storage.rs  transform.rs
savetracker/src/format/: definition.rs  mod.rs  pipeline.rs  registry.rs  transform.rs
savetracker/src/tui/: app.rs  mod.rs  ui.rs
src/: analyze.rs  config.rs  lib.rs  main.rs  snapshot.rs  storage.rs  watcher.rs
src/tui/: app.rs  mod.rs  ui.rs
watch-path/: Cargo.toml
watch-path/src/: ftp.rs  http.rs  lib.rs  local.rs  ssh.rs  url.rs  watcher.rs
