[package]
name = "savetracker-core"
version = "0.1.0"
edition = "2021"
description = "Core save file tracking: storage trait and binary patching"
license = "BSD-2-Clause"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
