[package]
name = "savetracker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core save file tracking: storage trait and binary patching"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
