[package]
name = "savetracker"
version = "0.1.0"
edition = "2021"
description = "Watch game save directories and track changes in save files"
license = "BSD-2-Clause"

[[bin]]
name = "savetracker"
path = "src/main.rs"

[lib]
name = "savetracker"
path = "src/lib.rs"

[dependencies]
savetracker-core = { path = "../savetracker-core" }

# Format detection & decoding
aes = "0.8"
dirs = "6"
flate2 = "1"
glob = "0.3"
hex = "0.4"
lz4_flex = "0.11"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
toml = "0.8"
zstd = "0.13"

# Shared
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# CLI & runtime
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
git2 = "0.20"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
shlex = "1.3"
tokio = { version = "1", features = ["full"] }
tui-textarea = { git = "https://github.com/0xferrous/tui-textarea.git", branch = "update-ratatui" }
watch-path = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
