[package]
name = "savetracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Watch game save directories and track changes in save files"

[[bin]]
name = "savetracker"
path = "src/main.rs"

[lib]
name = "savetracker"
path = "src/lib.rs"

[dependencies]
savetracker-core = { version = "0.2.0", path = "../savetracker-core" }

# Format detection & decoding
aes = "0.8"
dirs = "6"
flate2 = "1"
glob = "0.3"
hex = "0.4"
lz4_flex = "0.11"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
toml = "0.8"
zstd = "0.13"

# Shared
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# CLI & runtime
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
git2 = "0.20"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
shlex = "1.3"
tokio = { version = "1", features = ["full"] }
tui-textarea-2 = { version = "0.10", features = ["crossterm"] }
watch-path = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
